<resources>
    <string name="app_name">Bartr1.0</string>
    <string name="emailLogin">Your Email</string>
    <string name="passLogin">Your Password</string>
    <string name="btnLogin">Sign In</string>
    <string name="loginText">New User?</string>
    <string name="btnReg">Sign Up</string>
    <string name="username">Choose User Name(10xters or less)</string>
    <string name="email">Enter preferred email address</string>
    <string name="password">Enter a secret password</string>
    <string name="registerLabel">Create Account</string>
    <string name="join">Join Us</string>
    <string name="user_settings">Settings</string>
    <string name="user_deals">Deals</string>
    <string name="user_logout">Logout</string>
</resources>
