<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="60dp"
    android:paddingRight="60dp"
    android:paddingTop="60dp"
    android:paddingBottom="60dp"
    android:background="@drawable/background"
    tools:context="ng.bartr.bartr10.LoginActivity">
    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/loginText"
        android:textColor="#fff"
        android:textSize="45sp"/>
    <Button
        android:id="@+id/btnReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginText"
        android:layout_centerHorizontal="true"
        android:text="@string/btnReg"
        android:onClick="userReg"/>

    <TextView
        android:id="@+id/forgotPass"
        android:layout_below="@+id/btnReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"/>
    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailLogin"
        android:focusable="true"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignParentRight = "true"
        android:layout_alignParentEnd = "true"
        android:layout_above="@+id/passLogin"/>
    <EditText
        android:id="@+id/passLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignParentRight = "@+id/emailLogin"
        android:layout_alignParentEnd = "@+id/emailLogin"
        android:layout_above="@+id/btnLogin"
        android:hint="@string/passLogin"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/btnLogin"
        android:text="@string/btnLogin"
        android:textSize="34sp"
        android:onClick="userScreen"/>



</RelativeLayout>
